--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "notebook>=7.4.7",
+    "numpy>=2.3.4",
     "sympy>=1.14.0",
 ]
