C81_Maxima_and_minima_of_functions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,7 @@ dependencies = [
     "matplotlib>=3.10.7",
     "notebook>=7.4.7",
     "numpy>=2.3.4",
+    "scipy>=1.16.2",
+    "scipy-stubs==1.16.2.4",
     "sympy>=1.14.0",
 ]
